#585: Fixed that the title is too long

--- a/src/open_inwoner/scss/components/Header/AnchorMenu.scss
+++ b/src/open_inwoner/scss/components/Header/AnchorMenu.scss
@@ -56,10 +56,8 @@
   }
 
   .link {
-    height: var(--row-height);
     box-sizing: border-box;
     padding: var(--spacing-large);
-    white-space: nowrap;
 
     @media (min-width: 768px) {
       border-left: var(--border-width) solid;
